Bug 144674 - Base has No Context-Sensitive SQL Query Menu
Summary: Base has No Context-Sensitive SQL Query Menu
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.1.0.3 release
Hardware: All All
: medium minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.3.0 target:7.2.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2021-09-23 06:53 UTC by flywire
Modified: 2021-10-05 05:28 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description flywire 2021-09-23 06:53:40 UTC
Context-sensitive menus are generally used throughout LO, eg in Base, Create Query in Design View, select field, right-click, Paste.

Base, Create Query in SQL View has similar functionality but no context-sensitive menu, eg right-click is ignored. This is badly missed when it is standard functionality throughout LO.
Comment 1 Stang 2021-09-26 01:36:10 UTC
Can confirm this with:

Version: 7.2.1.2 / LibreOffice Community
Build ID: 87b77fad49947c1441b67c559c339af8f3517e22
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

Also not working:

Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: e0c7d1e4cf7e6cf73211e69a91f458e6ffe303cb
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2021-09-21_10:25:01
Calc: threaded

Last worked in:

Version: 7.0.4.2
Build ID: dcf040e67528d9187c66b2379df5ea4407429775
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

but not working:

Version: 7.1.0.3 / LibreOffice Community
Build ID: f6099ecf3d29644b5008cc8f48f42f4a40986e4c
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 2 Aron Budea 2021-10-03 02:13:22 UTC
Bibisected to the following commit using repo bibisect-linux-64-7.1. Adding CC: to Caolán McNamara.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=44f7674ffda49257dcc1709256dfc4676d12165c
author		Caolán McNamara <caolanm@redhat.com>	2020-08-18 12:02:45 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2020-08-19 10:11:30 +0200

weld OQueryTextView
Comment 3 Commit Notification 2021-10-04 08:06:23 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/84096998c181c8762fccc98f0faaf48fcf12ef97

tdf#144674 no context menu in SQL Query

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2021-10-04 08:12:23 UTC
context menu exists now in trunk, and backport to 7-2 in gerrit
Comment 5 Commit Notification 2021-10-04 08:53:21 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/c44574f6d28d8bb38e0a54ba079ca76b044bb346

tdf#144674 no context menu in SQL Query

It will be available in 7.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 flywire 2021-10-05 05:28:45 UTC
Confirmed fixed:

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 5a930d4b33e6b5e6642c936cb643c2c5605d6110
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: en-AU (en_AU); UI: en-GB
Calc: threaded