tdf#144674 no context menu in SQL Query

Change-Id: I3c6e9e7896da171d089579165f466b4b6e59a1a4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/123030
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>